--- a/views/scores.ejs
+++ b/views/scores.ejs
@@ -26,7 +26,7 @@
                 <p><strong>Email</strong>: <%= user.email %></p>
               </div> 
               <div class="p-2">
-                <form class="row row-cols-lg-auto g-3 align-items-center" action="/post/tickerRequest" method="POST">               
+                <form id= "myForm" class="row row-cols-lg-auto g-3 align-items-center" action="/post/tickerRequest" method="POST">               
                   <div class="col12">
                     <label
                       for="tickerRequestField" class="form-label"><strong>Request Ticker for update</strong>:             
@@ -105,12 +105,8 @@
     <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>   
+    <script type="text/javascript" src="/js/ajaxForm.js"></script>  
     <script type="text/javascript" src="/js/mainServerLevermann.js"></script>
-    <!-- <script>
-        $("#tickerRequestButton").click(function () {
-          $('#tickerRequestField').val('')
-        });
-    </script> -->
   </body>
 </html>  
 
