--- a/views/scores.ejs
+++ b/views/scores.ejs
@@ -26,7 +26,7 @@
                 <p><strong>Email</strong>: <%= user.email %></p>
               </div> 
               <div class="p-2">
-                <form id= "myForm" class="row row-cols-lg-auto g-3 align-items-center" action="/post/tickerRequest" method="POST">               
+                <form id= "myForm" class="needs-validation row row-cols-lg-auto g-3 align-items-center">               
                   <div class="col12">
                     <label
                       for="tickerRequestField" class="form-label"><strong>Request Ticker for update</strong>:             
