--- a/views/scores.ejs
+++ b/views/scores.ejs
@@ -29,7 +29,7 @@
                 <form id= "myForm" class="needs-validation row row-cols-lg-auto g-3 align-items-center">               
                   <div class="col12">
                     <label
-                      for="tickerRequestField" class="form-label"><strong>Request Ticker for update</strong>:             
+                      id="tickerLabel" for="tickerRequestField" class="form-label"><strong>Request Ticker for update</strong>:             
                     </label>         
                   </div>                    
                   <div class="col12">                                                  
@@ -39,6 +39,7 @@
                       id="tickerRequestField"
                       aria-describedby="tickerRequest"
                       name="tickerReq"
+                      placeholder="ticker"
                     />                
                   </div>
                   <button type="submit" id="tickerRequestButton" class="btn btn-primary">
