--- a/views/scores.ejs
+++ b/views/scores.ejs
@@ -44,7 +44,9 @@
                   </div>
                   <button type="submit" id="tickerRequestButton" class="btn btn-primary">
                     Submit
-                  </button>                         
+                  </button>  
+                  <label for="tickerReqMail">with mail alert</label>
+                  <input type="checkbox" id="tickerReqMail" name="tickerReq" checked=true>
                 </form>                           
               </div>                                
               <div class="p-2">
